practice/5.kubernetes-network/lesson_5/namespace_pg.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lesson5
  labels:
    app: lesson5
