practice/5.kubernetes-network/lesson_5/deployment_redmine.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-redmine
  namespace: lesson5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-redmine
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: app-redmine
    spec:
      containers:
      - image: redmine:4.1.1
        name: redmine
        ports:
        - containerPort: 3000
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 3000
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 60
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 3000
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 60
          initialDelaySeconds: 10
