practice/5.kubernetes-network/lesson_5/service_pg.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: lesson5
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: pg
  type: ClusterIP
