practice/5.kubernetes-network/lesson_5/service_redmine.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-redmine
  namespace: lesson5
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: app-redmine
  type: ClusterIP
