practice/5.kubernetes-network/lesson_5/ingress_redmine.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-redmine
  namespace: lesson5
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: svc-redmine
            port:
              number: 3000
